# fin-news

./: .gitignore  README.md  conda_script.sh  environment.yml  pyproject.toml
finnews/: data.py
finnews/data/: controllers.py
finnews/datasets/: __init__.py  fc.py  informer_fusion.py
finnews/models/: __init__.py  fc.py  informer_fusion.py  train.py
notebooks/: 01_data_processing.ipynb  02_embeddings.ipynb  03_model_baselines.ipynb  04_model_informer.ipynb
